k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-namespace
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
